# FSW_bee

./: .gitignore  .gitmodules  .python-version  Makefile  README.md  execute.sh
apps/hs/config/: default_hs_fcncodes.h  default_hs_msgids.h
apps/hs/fsw/inc/: hs_eventids.h
apps/hs/fsw/src/: hs_cmds.c  hs_utils.h
apps/hs/fsw/tables/: hs_amt.c
apps/hs/unit-test/: hs_cmds_tests.c
apps/hs/unit-test/stubs/: hs_utils_stubs.c
apps/sc/fsw/src/: sc_app.c
apps/sch_lab/fsw/tables/: sch_lab_table.c
apps/stx/: CMakeLists.txt  ESUP  arch_build.cmake  mission_build.cmake
apps/stx/.github/workflows/: codeql-build.yml
apps/stx/config/: default_stx_fcncodes.h  default_stx_interface_cfg.h  default_stx_internal_cfg.h  default_stx_mission_cfg.h  default_stx_msg.h  default_stx_msgdefs.h  default_stx_msgids.h  default_stx_msgstruct.h  default_stx_perfids.h  default_stx_platform_cfg.h  default_stx_tbl.h  default_stx_tbldefs.h  default_stx_tblstruct.h  default_stx_topicids.h
apps/stx/device/inc/: crc32.h  esup.h  rs232.h  rs485.h
apps/stx/device/src/: crc32.c  esup.c  rs232.c  rs485.c  stx_app.c
apps/stx/fsw/inc/: stx_eventids.h
apps/stx/fsw/src/: stx.c  stx.h  stx_cmds.c  stx_cmds.h  stx_dispatch.c  stx_dispatch.h  stx_utils.c  stx_utils.h  stx_version.h
apps/stx/fsw/tables/: stx_tbl.c
cfe/modules/cfe_testcase/src/: cfe_test_table.c
cfe/modules/core_api/: CMakeLists.txt
cfe/modules/core_api/config/: default_cfe_msgids.h
cfe/modules/core_api/fsw/inc/: cfe.h  cfe_error.h  cfe_rf.h  cfe_srl.h  cfe_srl_api_typedefs.h  cfe_srl_error.h  cfe_usr_error_macro.h
cfe/modules/core_private/config/: default_cfe_platform_cfg.h
cfe/modules/core_private/fsw/inc/: cfe_srl_core_internal.h
cfe/modules/es/config/: default_cfe_es_msg.h
cfe/modules/es/fsw/src/: cfe_es_module_all.h  cfe_es_objtab.c
cfe/modules/msg/fsw/src/: cfe_msg_msgid_v2.c
cfe/modules/rf/: CMakeLists.txt
cfe/modules/rf/fsw/src/: cfe_rf_api.c  cfe_rf_typedef.h
cfe/modules/srl/: CMakeLists.txt  Interface_config.json  README.md  arch_build.cmake  interface_config.cmake  mission_build.cmake
cfe/modules/srl/config/: default_cfe_srl_extern_typedefs.h  default_cfe_srl_fcncodes.h  default_cfe_srl_interface_cfg.h  default_cfe_srl_internal_cfg.h  default_cfe_srl_mission_cfg.h  default_cfe_srl_msg.h  default_cfe_srl_msgdefs.h  default_cfe_srl_msgids.h  default_cfe_srl_msgstruct.h  default_cfe_srl_platform_cfg.h  default_cfe_srl_topicids.h
cfe/modules/srl/fsw/inc/: cfe_srl_eventids.h
cfe/modules/srl/fsw/src/: cfe_srl_api.c  cfe_srl_basic.c  cfe_srl_basic.h  cfe_srl_csp.c  cfe_srl_csp.h  cfe_srl_dispatch.c  cfe_srl_dispatch.h  cfe_srl_handle.c  cfe_srl_handle.h  cfe_srl_init.c  cfe_srl_io.c  cfe_srl_io.h  cfe_srl_io_stub.c  cfe_srl_io_stub.h  cfe_srl_module_all.h  cfe_srl_mutex.c  cfe_srl_mutex.h  cfe_srl_priv.c  cfe_srl_priv.h  cfe_srl_task.c  cfe_srl_task.h  cfe_srl_types.h
cfe/modules/tbl/config/: default_cfe_tbl_msg.h  default_cfe_tbl_msgdefs.h
sample_defs/: cpu1_cfe_es_startup.scr  obc_cfe_es_startup.scr  sample_perfids.h  targets.cmake  toolchain-obc.cmake
script/: cspbuild.sh  execute.sh  gpiodbuild.sh  package.sh  transmission.sh  transmit.sh
tools/cFS-GroundSystem/: Guide-GroundSystem.md
tools/cFS-GroundSystem/Subsystems/cmdGui/: CHeaderParser-hdr-paths.txt  command-pages.txt
tools/cFS-GroundSystem/Subsystems/cmdGui/CommandFiles/: STX_APP_CMD  STX_GET  STX_SET_SYMBOLRATE  get
tools/cFS-GroundSystem/Subsystems/cmdGui/ParameterFiles/: STX_GET_SYMBOL_RATE  STX_SET_MODULATOR_DATA_INTERFACE  STX_SET_RS485BAUD  STX_SET_SYMBOLRATE
tools/cFS-GroundSystem/Subsystems/cmdUtil/: stx_command_test.sh
tools/serial-configtool/: README.md  generator.py  genfunction.py
